--- a/style.css
+++ b/style.css
@@ -98,15 +98,17 @@
       align-items: center;
       justify-content: space-between;
       height: 64px;
+      text
     }
 
     .brand {
       display: flex;
       align-items: center;
-      gap: .7rem;
-      font-weight: 800;
+      gap: .0px;
+      font-weight: 700;
       font-family: Poppins, Inter, sans-serif;
-      letter-spacing: .3px;
+      letter-spacing: .0px;
+        line-height: 1.1; 
     }
 
    .brand-mark {
@@ -169,7 +171,9 @@
       display: none;
       background: none;
       border: none;
-      font-size: 1.6rem;
+      font-size: 1.5rem;
+      justify-content: ;
+      
     }
 
     .cta {
